# web_mailing_service

./: .flake8  .gitignore  README.md  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  et --hard HEADgit reset --hard HEAD  manage.py  pyproject.toml  pytest.ini
clients/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
clients/migrations/: 0001_initial.py  0002_client_owner.py  0002_initial.py  0003_add_timestamps.py
config/: celery.py  settings.py  urls.py  wsgi.py
email_messages/: admin.py  apps.py  forms.py  models.py  test_forms.py  tests.py  urls.py  views.py
email_messages/migrations/: 0001_initial.py  0002_initial.py  0002_message_owner.py  0003_add_timestamps.py
mailings/: admin.py  apps.py  forms.py  models.py  services.py  tasks.py  test_tasks.py  tests.py  urls.py  views.py
mailings/management/commands/: send_mailing.py
mailings/migrations/: 0001_initial.py  0002_initial.py  0002_mailingattempt.py  0003_mailing_is_sent.py  0004_alter_mailing_first_sent_at.py  0005_mailing_owner.py  0006_mailing_created_at_mailing_is_active_and_more.py  0006_remove_mailing_is_sent_mailing_is_active_and_more.py  0007_mailing_created_at_mailing_is_sent.py  0008_add_timestamps.py
main/: apps.py  tests.py  urls.py  views.py
templates/: base.html
templates/clients/: client_confirm_delete.html  client_form.html  client_list.html
templates/email_messages/: message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
templates/mailings/: mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html
templates/main/: home.html
templates/users/: login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  profile.html  register.html  user_list.html
users/: admin.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
