[project]
name = "web_mailing_service"
version = "0.1.0"
description = "Сервис управления рассылками на Django"
requires-python = ">=3.11"
dependencies = [
    "django>=6.0",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "django-admin-interface>=0.28.0",
    "django-colorfield>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "black>=24.0",
    "isort>=5.13",
    "flake8>=7.0",
    "mypy>=1.0",
    "pydocstyle>=6.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = "tests.py"
addopts = "--cov=clients --cov=email_messages --cov=mailings --cov=main"

[tool.pydocstyle]
convention = "google"
add-ignore = "D100,D101,D102,D103,D104,D105,D106"
match-dir = "^(?!.*migrations).*"
match = "(?!__init__\\.py).*\\.py"

[tool.coverage.run]
omit = [
    "*/migrations/*",
    "*/__init__.py",
    "*/tests.py",
    "*/apps.py",
    "*/admin.py"
]
